--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sudomlaptop | El mejor servicio de reparaciòn de laptop</title>
+    <title>Sudomlaptop</title>
 </head>
 <body>
-    <H1>Siempre a su servicio</H1>
-    <h2>Contácto</h2>
+    <h1>Bienvenidos</h1>
 </body>
 </html>
